syntax = "proto3";
package rust_service.v1;

import "google/protobuf/empty.proto"; // Assuming you're returning google.protobuf.Empty

option go_package = "github.com/arnavsharma/central/gen/go/rustservicepb";

service RustService {
  rpc SendStockData(SendStockDataRequest) returns (google.protobuf.Empty);
}

message SendStockDataRequest {
  string timestamp = 1;
  repeated StockValue stocks = 2;
}

message StockValue {
  float open = 1;
  float close = 2;
  float high = 3;
  float low = 4;
  string value = 5;
}
